--- a/src/components/post/post.module.css
+++ b/src/components/post/post.module.css
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 8px;
+  max-width: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 .row {
